Bug 246252 - Focus in ledger not visible
Summary: Focus in ledger not visible
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-30 12:24 UTC by Thomas Baumgart
Modified: 2010-07-31 03:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2010-07-30 12:24:45 UTC
Version:           unspecified (using KDE 4.3.5) 
OS:                Linux

While selecting multiple transactions in the ledger using the keyboard, the focus is not visible.

Reproducible: Always

Steps to Reproduce:
- Open ledger view (with transaction form enabled)
- Select any transaction with the mouse
- Use Ctrl-Up or Ctrl-Down to move the focus w/o changing the selection

Actual Results:  
Data in transaction form is updated, but there's no indication in the ledger as to which transaction this data belongs

Expected Results:  
A focus frame is shown on the transaction that has the focus.
Comment 1 Alvaro Soliverez 2010-07-31 03:38:17 UTC
SVN commit 1157431 by asoliverez:

Check whether the item has focus when repainting the cell.

BUG:246252

 M  +7 -1      transaction.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1157431