Check whether the item has focus when repainting the cell.

BUG:246252

svn path=/trunk/extragear/office/kmymoney/; revision=1157431